src/objects/Bank_Key__c.object
<CustomObject>
    <fields>
        <fullName>Bank_Key_ID__c</fullName>
        <externalId>true</externalId>
        <label>Bank Key ID</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bank_Name__c</fullName>
        <label>Bank Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bank_Number__c</fullName>
        <label>Bank Number</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Conversion_ID__c</fullName>
        <externalId>true</externalId>
        <label>Conversion ID</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>PKL_BankCountry</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>SWIFT__c</fullName>
        <label>SWIFT</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Street__c</fullName>
        <label>Street</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <label>Bank Key</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Bank_Key_ID__c</columns>
        <columns>Bank_Name__c</columns>
        <columns>Bank_Number__c</columns>
        <columns>Conversion_ID__c</columns>
        <columns>City__c</columns>
        <columns>Country__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>BK{0000000000}</displayFormat>
        <label>Bank Key Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Bank Keys</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>